// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SupportInstructions renders correctly 1`] = `
<div>
  <div
    class="card-header small-title"
  >
    support-instructions
    <button
      class="btn btn-sm btn-default"
      type="button"
      value="edit"
    >
      edit
    </button>
  </div>
  <div
    class="card-body"
  >
    <div>
      instructions
    </div>
  </div>
</div>
`;

exports[`SupportInstructions renders no results message when there is no existing instruction 1`] = `
<div>
  <div
    class="card-header small-title"
  >
    support-instructions
    <button
      class="btn btn-md btn-primary btn-monospaced"
      type="button"
      value="add"
    >
      <svg
        class="lexicon-icon lexicon-icon-plus"
      >
        <use
          xlink:href="#plus"
        />
      </svg>
    </button>
  </div>
  <div
    class="no-results"
  >
    no-support-instructions
  </div>
</div>
`;
